# PaperForge

./: %TEMP%test_import.py  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  OCR-V2-READINESS-SUMMARY.md  PROJECT-MANAGEMENT.md  README.en.md  README.md  README.zh-CN.md  README.zh.md  REVIEW.md  _amb_detail.py  _check_code.py  _check_ct.py  _check_deploy.py  _check_effect.py  _check_rebuild.py  _chk_pdf.py  _chk_vfs_p11.py  _dbg_box1.py  _extract_master_figs.py  _figmap.json  _final_stats.py  _master_funcs.txt  _rebuild_verify.py  _render_full.py  _temp_bootstrap_vec.py  _test_6qnr.py  _tsckavis_inspect.py  local-page_trace.md  loss_survey_expanded.md  manifest.json  package-lock.json  package.json  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-chaos.yml  ci.yml  publish.yml  release.yml
.husky/: pre-commit
.omp/: AGENTS.md  RULES.md  WATCHDOG.md  config.yml
.opencode/: opencode.json
.planning/: 2026-07-10-retrieval-recovery-plan.md  BRANCH-REVIEW.md  MILESTONES.md  PROJECT.md  REQUIREMENTS-v1.2.md  REQUIREMENTS.md  ROADMAP-v1.2.md  ROADMAP.md  STATE.md  retrieval-approach-a-python-cli.md  retrieval-approach-b-split-read.md  v1.11-MILESTONE-AUDIT.md  v1.12-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.1-MILESTONE-AUDIT.md
.planning/intel/: ARCH.md  QUALITY.md  TECH.md
.planning/milestones/: v1.1.md  v1.11-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3.md  v1.4.2.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md  v2.0-ROADMAP.md  v2.1-ROADMAP.md
.planning/phases/: pr1-residual-fixes-plan-draft.md
.planning/research/: ARCHITECTURE.md  DEFECTS.md  FEATURES.md  MILESTONE-RESEARCH-LOCK.md  PITFALLS.md  STACK.md  SUMMARY.md  v1.3-zotero-paths.md
05_Bases/: Literature Hub.base
audit/: 2026-06-28-data-audit-findings.json  28ALPCY7_findings.md  coverage_ledger.json  deep-dive-report.md  investigation-findings.md  media_asset_vision_report.md  reference-zone-audit.json  zone-role-batch-audit-report.md
audit/23T2B8ZX/: audit_report.json  audit_report.md  audit_scope.json  block_coverage_summary.json  block_trace.csv  figure_table_ownership_summary.json  fulltext_block_mapping_summary.json  page_risk_summary.json  reference_intrusion_candidates.json  reference_span_audit.json
audit/24A2QUAH/: audit_report.json  audit_report.md  audit_scope.json  block_coverage_summary.json  block_trace.csv  figure_table_ownership_summary.json  fulltext_block_mapping_summary.json  page_risk_summary.json  reference_intrusion_candidates.json  reference_span_audit.json
audit/24YKLTHQ/: audit_report.json  audit_report.md  audit_scope.json  block_coverage_summary.json  block_trace.csv  figure_table_ownership_summary.json  fulltext_block_mapping_summary.json  page_risk_summary.json  reference_intrusion_candidates.json  reference_span_audit.json
audit/27MSS3VH/: audit_report.json  audit_report.md  audit_scope.json  block_coverage_summary.json  block_trace.csv  figure_table_ownership_summary.json  fulltext_block_mapping_summary.json  page_risk_summary.json  (+2 more)
command/: ld-deep.md  ld-paper.md  lp-index-refresh.md  lp-ocr.md  lp-selection-sync.md  lp-status.md  pf-deep.md  pf-ocr.md  pf-paper.md  pf-status.md  pf-sync.md
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  COMMANDS.md  CONSISTENCY-CHECKLIST.md  INSTALLATION.md  MIGRATION-v1.2.md  MIGRATION-v1.4.md  MODULAR_INSTALL.md  README.md  ai-agent-setup-guide-zh.md  ai-agent-setup-guide.md  design-v2-version-history-panel.md  design-version-history-panel.excalidraw  getting-started.md  maintainer-guide.md  prd-v2-search-rebuild-ux.md  prd-v3-search-performance.md  setup-guide.md  troubleshooting.md  update-upgrade.md  user-manual.md  ux-contract.md
experiments/: sample_zotero_annotations.json  zotero_annotation_probe.py
fixtures/: MANIFEST.json  vault_builder.py
paperforge/: __init__.py  __main__.py  cli.py  config.py  literature-qa-harness.md  logging_config.py  ocr_diagnostics.py  pdf_resolver.py  query_planning.py  setup_wizard.py
paperforge_lite/: __init__.py  __main__.py  cli.py  config.py  ocr_diagnostics.py
patch-plan/: annotation-schema-v3.md  annotation-service-api.md  plugin-overlay-adapter.md
project/: P2-issues-for-gpt.md
reports/: 00-executive-summary.md  01-zotflow-architecture.md  01-zotflow-dataflow.mmd  02-zotero-sqlite-schema.md  03-paperforge-schema-design.md  04-obsidian-pdf-overlay-feasibility.md  05-mvp-implementation-plan.md  06-risk-and-license-review.md  07-final-recommendation.md
scripts/: bump.py  check_version_sync.py  consistency_audit.py  install-paperforge.ps1  setup.py  sync-plugin-version.py  update-paperforge.ps1  validate_setup.py  welcome.py
templates/: 文献阅读.md  科研读图指南.md
tests/: conftest.py  test_appendix_figure_numbering.py  test_asset_index.py  test_asset_index_integration.py  test_asset_state.py  test_base_preservation.py  test_base_views.py  test_chroma_migration.py  test_cli_paths.py  test_cli_worker_dispatch.py  test_command_docs.py  test_config.py  test_context.py  test_dashboard_command.py  test_deep_search.py  test_discussion.py  test_doctor.py  test_e2e_cli.py  test_e2e_embed_retrieve.py  test_e2e_ocr_pipeline.py  test_e2e_pipeline.py  test_embed_integration.py  test_layer4_gateway_commands.py  test_layer4_lance_backend.py  test_layer4_paper_lookup.py  test_layer4_structure_tree.py  test_layer4_units_and_fts.py  test_layer4_vector_backend.py  test_ld_deep_config.py  test_ld_deep_postprocess.py  test_ld_deep_skel.py  test_legacy_ocr_backfill.py  test_legacy_worker_compat.py  test_literature_hub_regressions.py  test_memory_restore.py  test_migration.py  test_ocr.py  test_ocr_artifact_paths_config.py  test_ocr_artifacts.py  test_ocr_attachments.py  (+111 more)
(+2732 files in other folders)
